= Changelog
== Version 1.0.2 - 2008-12-03

* Fix FileType namespace issue (thanks defunkt)
* various task maintenance

== Version 1.0.1 - 2008-04-24

* Fix performance issue in serving large files
* Fix performance issue in checking for coderay file type when coderay would not be used.

== Version 1.0.0 - 2008-04-20

* Convert Heel to a Rack and Thin application

== Version 0.6.0 - 2007-11-21

* Fixed bug where an exception was thrown if a 0 byte file was served.
* Changed change 'resources' directory to 'data' 
* Renamed internal constants
* Changed operating URL's to avoid conflict with directories heel may be serving

== Version 0.5.0 - 2007-11-19

* Add in code highlighting support via coderay
* extract CSS files to a resource
* increase test coverage

== Version 0.4.1 - 2007-11-15

* Fix bug [#15645] - not starting up on windows

== Version 0.4.0 - 2007-11-04

* Added common log format output to terminal or logfile as appropriate.

== Version 0.3.2 - 2007-08-30

* fix failure to find background option
* remember to double check your tests before releasing

== Version 0.3.1 - 2007-08-30

* fix failure to find pid file [Bug #13530]
* remember to stop releasing software in the wee hours of the morning

== Version 0.3.0 - 2007-08-30

* update with Launchy requirement 0.3.0
* remove unneeded famfamfam icons
* change default listening address to 127.0.0.1
* refactored handler test, now with more coverage

== Version 0.2.0 - 2007-08-11

* Initial public release
* Added daemonizing of server
* Added launching of browser to server URL

== Version 0.1.0

* rename project to 'heel'
* gem packaging

== Version 0.0.1 - 2007-05-03

* initial development release 
