@@ -1,8 +1,9 @@
 = Changelog
 == Version 1.0.2 - 2008-12-03
 
-* Fix FileType namespace issue (thanks defunkt)
+* Fix FileType namespace issue (thanks defunkt) and new version of coderay
 * various task maintenance
+* updated version dependencies
 
 == Version 1.0.1 - 2008-04-24
 
